--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
 <body>
     <div id="app"></div>
     <!--Scripts-->
-    <script src="http://localhost:9000/js/index.js"></script>
+    <!--<script src="http://localhost:9000/js/index.js"></script>-->
+    <script src="./bundle.js"></script>
 </body>
 </html>
